apps/bifrost/service-bifrost.yaml
apiVersion: v1
kind: Service
metadata:
  name: bifrost
spec:
  type: ClusterIP
  selector:
    app: bifrost
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
