apps/bifrost/ingress-bifrost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bifrost
spec:
  ingressClassName: cilium
  rules:
  - host: bifrost.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: bifrost
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - bifrost.almothana.xyz
      secretName: almothana-xyz-tls
