apps/bifrost/networkpolicy-bifrost.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bifrost
spec:
  endpointSelector:
    matchLabels:
      app: bifrost
  ingress:
    # From Ingress
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    # From Open WebUI
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: open-webui
            k8s:app.kubernetes.io/component: open-webui
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

  egress:
    # To DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # To the vLLM engines.
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8001"
              protocol: TCP
    # To getbifrost.ai
    - toFQDNs:
        - matchName: getbifrost.ai
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
